--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.7",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.13",
     "@types/react-native-vector-icons": "^6.4.18",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "^5.0.0",
+    "react-native-ui-datepicker": "^3.1.2",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
